# longform-agent

./: .gitattributes  .gitignore  README.md  config.toml.example  pyproject.toml  requirements.txt
examples/demo_project/: README.md  config.toml  recent_exchange.md
examples/demo_project/project/: agent_memory.md  bible.md
examples/demo_project/project/chapters/: 01_introduction.md  01_introduction.summary.md  02_technical_debt.md  02_technical_debt.summary.md
src/longform_agent/: __init__.py  agent.py  cli.py  config.py  context.py  llm.py  summarizer.py  tools.py
tests/: test_context.py  test_tools.py
