[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longform-agent"
version = "0.1.0"
description = "A minimal agent harness for long-form writing workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "agent", "writing", "longform"]
dependencies = [
    "openai>=1.12.0",
    "duckduckgo-search>=6.0.0",
    "rich>=13.7.0",
    "whatthepatch>=1.0.5",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
longform-agent = "longform_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
